unpackaged/main/default/objects/AnonymizationSFProcess__mdt/AnonymizationSFProcess__mdt.object-meta.xml
<CustomObject>
    <label>AnonymizationSFProcess</label>
    <pluralLabel>AnonymizationSFProcesses</pluralLabel>
</CustomObject>