unpackaged/main/default/objects/AnonymizationSFProcess__mdt/fields/LookupField__c.field-meta.xml
<CustomField>
    <fullName>LookupField__c</fullName>
    <label>Lookup Field Name</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>